--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -10,6 +10,7 @@
 }
 
 .burgerWrapper {
+    position: absolute;
     margin-left: 25px;
 }
 
